--- a/output.css
+++ b/output.css
@@ -744,6 +744,14 @@ select {
   margin: 1.5rem;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -766,6 +774,10 @@ select {
   height: 0.25rem;
 }
 
+.min-w-4 {
+  min-width: 1rem;
+}
+
 .max-w-sm {
   max-width: 24rem;
 }
@@ -782,10 +794,18 @@ select {
   flex: 1 1 auto;
 }
 
+.flex-grow {
+  flex-grow: 1;
+}
+
 .border-spacing-4 {
   --tw-border-spacing-x: 1rem;
   --tw-border-spacing-y: 1rem;
   border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -986,6 +1006,10 @@ select {
 
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .italic {
